# djcuecraft

./: .gitignore  AGENTS.md  README.md  launch-ui.bat
.github/workflows/: backend-tests.yml
backend/: pyproject.toml
backend/src/dj_library_prep/: __init__.py  beat_analyzer.py  bpm_analyzer.py  cli.py  correction_importer.py  csv_exporter.py  cue_exporter.py  database.py  genre_normalizer.py  local_api.py  metadata.py  models.py  pads.py  review_service.py  scanner.py
backend/src/dj_library_prep/rules/: __init__.py  dj_utility_tags.json  general_genres.json  indian_music.json  latin_music.json
backend/tests/: conftest.py  test_beat_analyzer.py  test_bpm_analyzer.py  test_cli.py  test_correction_importer.py  test_csv_exporter.py  test_cue_exporter.py  test_database.py  test_genre_normalizer.py  test_local_api.py  test_metadata.py  test_models.py  test_pads.py  test_review_service.py  test_scanner.py
docs/: beat-cue-analysis.md  bpm-analysis.md  codex-handoff.md  genre-taxonomy.md  product-brief.md  product-memory.md  review-ui.md  roadmap.md  technical-plan.md
frontend/: app.js  freq-worker.js  index.html  styles.css
