[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dj-library-prep"
version = "0.1.0"
description = "Local-first DJ library preparation backend"
requires-python = ">=3.10"
dependencies = [
  "mutagen>=1.47.0"
]

[project.optional-dependencies]
audio = [
  "librosa>=0.10.0"
]
dev = [
  "pytest>=8.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dj_library_prep = ["rules/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
