[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dj-library-prep"
version = "0.1.0"
description = "Local-first DJ library preparation backend"
requires-python = ">=3.10"
keywords = ["dj", "metadata", "music-library", "sqlite"]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio"
]
dependencies = [
  "mutagen>=1.47.0"
]

[project.optional-dependencies]
audio = [
  "librosa>=0.10.0"
]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
dj-library-prep = "dj_library_prep.cli:main"

[project.urls]
Repository = "https://github.com/rajivkothari/djcuecraft"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dj_library_prep = ["rules/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-p",
  "no:cacheprovider"
]
